--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ button:hover{
 }
 .profile-box table tr td .input-field{
     width: 100%;
+    height: 28px;
     padding: 6px 5px 6px 33px;
     outline: none;
     border: 1px solid rgba(0, 0, 0, 0.3);
