--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ p{
     font-size: 14px
 }
 button{
-    padding: 7px 15px;
+    padding: 8px 15px;
     margin-top: 10px;
     cursor: pointer;
     background: #fff;
@@ -42,7 +42,7 @@ button:hover{
 .heading{
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    padding: 5px 10px;
+    padding: 8px 10px;
     margin: 0;
     background: #F3F3F3;
     font-size: 14px;
@@ -60,7 +60,7 @@ button:hover{
     height: auto;
     position: relative;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    border-top: none;
+    /*border-top: none;*/
     border-bottom: none;
 }
 .social ul{
