--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ button:hover{
     height: auto;
     position: relative;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    /*border-top: none;*/
+    border-top: none;
     border-bottom: none;
 }
 .social ul{
@@ -156,17 +156,18 @@ button:hover{
     position: absolute;
     top: 1px;
     left: 1px;
-    width: 28px;
-    height: 28px;
-    text-align: center;
-    line-height: 27px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    aligh-items: center;
     background: #f3f3f3;
     border-right: 1px solid rgba(0, 0, 0, 0.3);
     transition: 0.3s;
 }
 .profile-box table tr td .input-field{
     width: 100%;
-    height: 30px;
+    height: 36px;
     padding: 6px 5px 6px 33px;
     outline: none;
     border: 1px solid rgba(0, 0, 0, 0.3);
