--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 360px){
     .wrapper, .container{
         width: 100%;
+        border: none;
     }
     .profile{
         width: 100%;
