--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,8 @@
 @media screen and (max-width: 360px){
-    .wrapper, .container{
+    .wrapper{
         width: 100%;
+    }
+    .container{
         border: 1px solid #fff;
     }
     .profile{
