--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,7 +3,7 @@
         width: 100%;
     }
     .container{
-        border: 1px solid #fff;
+        border-top: 1px solid rgba(0,0,0,0.3);
     }
     .profile{
         width: 100%;
